grammars/strudel_mini/test/test/corpus/spec_examples.txt
================================================================================
Whitespace-separated events
================================================================================

c e g b

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (event (identifier))
  (event (identifier))
  (event (identifier)))

================================================================================
Step repetition (*) on a group
================================================================================

[e5 b4 d5 c5]*2

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier))
    (event (identifier)))
  (repeat_suffix (number)))

================================================================================
Step division (/)
================================================================================

[e5 b4 d5 c5]/2

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier))
    (event (identifier)))
  (divide_suffix (number)))

================================================================================
Time subdivision via [ ]
================================================================================

e5 [b4 c5] d5

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (group
    (event (identifier))
    (event (identifier)))
  (event (identifier)))

================================================================================
Angle bracket alternation
================================================================================

<e5 b4 d5 c5>

--------------------------------------------------------------------------------

(source_file
  (alternation
    (event (identifier))
    (event (identifier))
    (event (identifier))
    (event (identifier))))

================================================================================
Polyphony with comma
================================================================================

[g3,b3,e4]

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier))))

================================================================================
Elongation with @
================================================================================

<[g3,b3,e4]@2 [a3,c3,e4]>

--------------------------------------------------------------------------------

(source_file
  (alternation
    (group
      (event (identifier))
      (event (identifier))
      (event (identifier)))
    (elongate_suffix (number))
    (group
      (event (identifier))
      (event (identifier))
      (event (identifier)))))

================================================================================
Replication with !
================================================================================

<[g3,b3,e4]!2 [a3,c3,e4]>

--------------------------------------------------------------------------------

(source_file
  (alternation
    (group
      (event (identifier))
      (event (identifier))
      (event (identifier)))
    (replicate_suffix (number))
    (group
      (event (identifier))
      (event (identifier))
      (event (identifier)))))

================================================================================
Probabilistic suffix default
================================================================================

[g3,b3,e4]*8?

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier)))
  (repeat_suffix (number))
  (probability_suffix))

================================================================================
Probabilistic suffix explicit
================================================================================

[g3,b3,e4]*8?0.1

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier)))
  (repeat_suffix (number))
  (probability_suffix (number)))

================================================================================
Random selection with |
================================================================================

[g3,b3,e4] | [a3,c3,e4]

--------------------------------------------------------------------------------

(source_file
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier)))
  (group
    (event (identifier))
    (event (identifier))
    (event (identifier))))

================================================================================
Euclidean rhythm
================================================================================

bd(3,8,0)

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (euclid_suffix (number) (number) (number)))

================================================================================
Rest with tilde
================================================================================

b4 [~ c5] d5 e5

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (group
    (rest)
    (event (identifier)))
  (event (identifier))
  (event (identifier)))

================================================================================
Rest with hyphen (Strudel-specific)
================================================================================

b4 [- c5] d5 e5

--------------------------------------------------------------------------------

(source_file
  (event (identifier))
  (group
    (rest)
    (event (identifier)))
  (event (identifier))
  (event (identifier)))
